[package]
name = "helmls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.6"
lsp-types = {version = "0.93", features = ["default", "proposed"]}
serde_json = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_yaml]
version = "0.8"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tower-lsp]
version = "0.17"

[dependencies.env_logger]
version = "0.9"

[dependencies.lazy_static]
version = "1"

[dependencies.regex]
version = "1"
